# vanilla-project-bootstrapper

./: .gitignore  AGENTS.md  LICENSE  README.md  github_repo.sh  juggle-sandbox-setup.md  juggle.conf  pyproject.toml  risks.md  setup.sh  spec.md  system-spec.md  vanilla-apt.list  vm_setup_script.py
.claude/: settings.json
scripts/: juggle_daemon_manager.py
skills/qa/: qa.md  qa_runner.py  sample_questions.toml
src/hello_world/: __init__.py  __main__.py  main.py
tests/: test_hello_world.py  test_juggle_daemon_manager.py  test_security.py  test_vm_setup.py
