[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
version = "0.1.0"
description = "A simple Hello World Python application"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
hello-world = "hello_world.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "apk: Alpine Linux specific tests",
    "apt: Debian/Ubuntu specific tests",
    "disk: Disk space tests",
    "memory: Memory/swap tests",
    "firewall: Firewall tests",
    "ssh: SSH hardening tests",
    "network: Network security tests",
    "security: General security tests",
]

[tool.setuptools.packages.find]
where = ["src"]
